<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/around_padding"
    android:paddingStart="@dimen/start_padding"
    android:paddingEnd="@dimen/end_padding"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="johndoe@example.com"
        android:hint="@string/to"
        android:inputType="textAutoComplete"
        android:minHeight="48dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints="@string/message_hint"
        android:hint="@string/message"
        android:gravity="top"
        android:inputType="textAutoComplete"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/send"
        android:padding="@dimen/button_click_me_padding"
        />


</LinearLayout>