<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/around_padding"
    tools:context=".LearnFrameLayout">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/batman"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/around_padding1"
        android:layout_gravity="top|center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/inner_text_padding"
            android:textSize="20sp"
            android:text="@string/layover_text_over_batman"
            android:textColor="@color/material_dynamic_tertiary99"
            android:layout_gravity="top|center"
            />

        <TextView
            android:id="@+id/not_mario_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/inner_text_padding"
            android:textSize="20sp"
            android:text="@string/not_mario_eng"
            android:textColor="@color/material_dynamic_tertiary99"
            android:layout_gravity="top|center"
            />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/english_on"
        android:textOff="@string/french_on"
        android:layout_gravity="center"
        />

</FrameLayout>